# pytwee

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pypi.yml  test.yml
docs/: make.sh  requirements.txt
docs/src/: conf.py  examples.rst  index.rst  usage.rst
pytwee/: __init__.py  __main__.py  story.py  twee.py  twee2.py  twee3.py
tests/: __init__.py  __main__.py  story.py  t001.py  t001.tw
